chore: 更新 api spec & 語言初始邏輯 & wallet 收合
